# casbot2-ros2-sdk

./: README.md
docs/: CASBOT02_二次开发手册.md  ROS2_快速开始.md  ROS2_自定义消息包使用指南.md  ROS2_运控接口参考.md  二开文档（ros2接口部分）（26.06.29）.md  二次开发手册.md  发布说明.md  运动控制接口.md
examples/: README.md
examples/cpp/casbot2_cpp_demo/: CMakeLists.txt  package.xml
examples/cpp/casbot2_cpp_demo/src/: action_voice_demo.cpp  basic_control_demo.cpp  debug_joint_demo.cpp  monitor_topics_demo.cpp  service_mode_demo.cpp
examples/interfaces/: README.md
examples/interfaces/python/: all_interfaces_demo.py
examples/python/casbot2_py_demo/: package.xml  setup.cfg  setup.py
examples/python/casbot2_py_demo/casbot2_py_demo/: __init__.py  action_voice_demo.py  control_demo.py  debug_joint_demo.py  monitor_topics_demo.py  service_mode_demo.py
examples/python/casbot2_py_demo/resource/: casbot2_py_demo
examples/scenarios/: boot_check.md  real_robot.md  simulation.md
examples/workflows/cpp/casbot_cpp_test/: CMakeLists.txt  package.xml
examples/workflows/cpp/casbot_cpp_test/src/: t01_get_state.cpp  t02_switch_mode.cpp  t03_joint_states.cpp  t04_cmd_vel.cpp  t05_upper_debug.cpp
examples/workflows/python/casbot_py_test/: t01_get_state.py  t02_switch_mode.py  t03_joint_states.py  t04_cmd_vel.py  t05_upper_debug.py  test_flow1_walk.py  test_flow2_upper_debug.py  test_flow3_whole_body.py  test_flow4_sensors_and_actions.py  test_flow_debug_kp_kd.py  test_joint_states_kp_kd.py  test_wbd_action_play.py
